--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -66,7 +66,9 @@ jobs:
           context: .
           file: ./${{ matrix.dir }}/Dockerfile
           push: true
-          tags: ghcr.io/threefoldtech/${{ matrix.image }}:${{ steps.version.outputs.TAG_VERSION }}
+          tags: |
+            ghcr.io/threefoldtech/${{ matrix.image }}:${{ steps.version.outputs.TAG_VERSION }}
+            ghcr.io/threefoldtech/${{ matrix.image }}:latest
           labels: ${{ steps.meta.outputs.labels }}
           #  For workflows triggered by release, `github.ref_name` is the short name for the release tag created.
           build-args: |
