--- a/mass-deployer/example/conf.yaml
+++ b/mass-deployer/example/conf.yaml
@@ -1,44 +1,33 @@
 node_groups:
   - name: group_a
-    nodes_count: 3
-    free_cpu: 2
-    free_mru: 16384
-    free_ssd: 524288000
-    free_hdd: 4096
-    dedicated: false
-    pubip4: false
-    pubip6: false
-    certification_type: Diy
-    region: ""
+    nodes_count: 3 # amount of nodes to be found
+    free_cpu: 2 # number of logical cores
+    free_mru: 16384 # amount of memory in mb
+    free_ssd: 100 # amount of ssd storage in gb
+    free_hdd: 50 # amount of hdd storage in gb
+    dedicated: false # is dedicated nodes?
+    pubip4: false # should the nodes have free ip v4
+    pubip6: false # should the nodes have free ip v6
+    certified: false # should the nodes be certified(if false the nodes could be certified of diyed) 
+    region: "europe" # region could be the name of the continents the nodes are located in (eg: europe, asia,...)
     min_bandwidth_ms: 100
-  - name: group_b
-    free_mru: 4096
-    free_ssd: 524288000
-    nodes_count: 9
-
 vms:
   - name: examplevm
-    vms_count: 5
-    node_group: group_a
-    cpu: 1
-    mem: 256
-    ssd:
-      capacity: 5
+    vms_count: 5 # amount of vms with the same configurations
+    node_group: group_a # the name of the predefined group of nodes
+    cpu: 1 # number of logical cores
+    mem: 256 # amount of memory in mb
+    ssd: # list of ssd storage needed to be mounted to the vm
+      capacity: 5 # capacity in gb
       mount_point: /mnt/ssd
-    hdd: true
     pubip4: false
     pubip6: false
     flist: https://hub.grid.tf/tf-official-apps/base:latest.flist
-    root_size: 0
     entry_point: /sbin/zinit init
-  - name: example2
-    vms_count: 100
-    cpu: 1
-    mem: 256
-    node_group: group_b
-    flist: https://hub.grid.tf/tf-official-apps/base:latest.flist
-    entry_point: /sbin/zinit init
+    root_size: 0 # root size in gb
+    ssh_key: example1 # the name of the predefined ssh key
 
-sshkey: example-ssh-key
-mnemonic: example-mnemonic
-network: dev
+ssh_key: # map of ssh keys with key=name and value=the actual ssh key
+  example1: ssh_key1
+mnemonic: example-mnemonic # mnemonic of the user
+network: dev # eg: main, test, qa, dev
