--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Please fill the fields to help us solving your bug! Don't forget to add the right label.
+        Please fill the fields to help us solving your bug! Don't forget to add the right label
 
   - type: textarea
     id: what-happened
