--- a/.github/workflows/clean_test_account.yml
+++ b/.github/workflows/clean_test_account.yml
@@ -34,4 +34,4 @@ jobs:
         run: /bin/bash -c  "{ echo ${{ secrets.MNEMONICS }}; echo ${{ matrix.network }}; } | bin/tf-grid-cli login"
 
       - name: Clean contracts
-        run: bin/tf-grid-cli cancel contracts all
+        run: bin/tf-grid-cli cancel contracts --all
